<resources>
    <string name="banner_ads_id">ca-app-pub-6151128815912996/2549835262</string>
    <string name="admob_publisher_interstitial_id">ca-app-pub-6151128815912996/5363700864</string>
    <!-- Change AdMob Id -->

    <string name="app_name">Ampere Meter</string>
    <string name="action_settings">Settings</string>
    <string name="action_pro">Buy Pro Version</string>
    <string name="action_Rate">Rate Us</string>
    <string name="action_share">Share</string>
    <!-- new line-->
    <string name="remove_ads">Remove Ads</string>
    <string name="action_alert_settings">Alert settings</string>
    <string name="flowingcurrent_text_view">Flowing current</string>

    <string name="level_text_view">Level</string>
    <string name="remaning_text_view">Remaining</string>
    <string name="capacity_text_view">Capacity</string>
    <string name="technonlogy_text_view">Technology</string>
    <string name="healt_text_view">Health</string>
    <string name="temperature_text_view">Temperature</string>
    <string name="voltage_text_view">Voltage</string>
    <string name="charger_text_view">Charger</string>
    <string name="model_text_view">Model</string>
    <string name="status_text_view">Status</string>
    <string name="android_version_text_view">Android version</string>
    <string name="build_id_text_view">Build ID</string>
    <string name="dialog_estimate_text_view">Estimated Charging</string>

    <string name="dialog_time_text_view">Time</string>
    <string name="setting_message1_text_view">Open to connect</string>
    <string name="setting_message2_text_view">The application automatically starts when you connect the charger</string>
    <string name="message_text_view">Please press on the connected button for more information</string>
    <string name="chip_message1_text_view">* Sorry, your phone does not have a sensor which measures electrical current. A sensor is required for this program to measure the flow of current. Therefore, in the absence of this sensor, the current is estimated based on USB and AC charger information, which only provide approximations.</string>
    <string name="chip_message2_text_view">* Moreover, it calculates the expected charging time. This feature is additional and exclusive to the Ampere Meter app. This was included to facilitate users without the chips so that they can know about the expected charging time.</string>
    <string name="chip_message3_text_view">* If any trouble arises from the use of this app, please inform us by email.</string>


    <!-- buton-->
    <string name="ok_buton">ok</string>


    <string name="connectd">Connected</string>
    <string name="not_charging">Not Charging</string>
    <string name="defult_plug_type">Unknown</string>
    <string name="AC_plug_type">AC</string>
    <string name="Usb_plug_type">USB</string>
    <string name="defult_health_String">Unknown</string>
    <string name="dead_health_String">Dead</string>
    <string name="good_health_String">Good</string>
    <string name="over_heat_health_String">Over Heat</string>
    <string name="over_voltage_health_String">Over Voltage</string>
    <string name="faliur_health_String">Failure</string>
    <string name="not_charging_status">Not Charging</string>
    <string name="full_status">Full</string>
    <string name="discharge_status">Discharging</string>

    <string name="defult_status">Unknown</string>
    <string name="charging_status">Charging</string>


    <string name="hour">hours and </string>
    <string name="mint"> minutes</string>

    <string name="setting_language_main">Language</string>
    <string name="setting_language_messae">Ignore device language and use other</string>
    <string name="more_apps">More apps</string>

    <!--new string in after 2.4 version -->
    <string name="temperature_heading_setting">Temperature in</string>
    <string name="temperature_detaile_setting">The unit of temperature choose either celsius(C) or Fahrenheit(F)</string>
    <string name="charging_time_heading_setting">Charing time screen</string>
    <string name="charging_ime_detaile_setting">Show estimating charging time screen</string>
    <string name="Alert_bt_setting">Alert Setting</string>
    <string name="Alert_custom_tv_setting">Customise Alert Setting</string>
    <string name="translater_heading_setting">Translators</string>
    <string name="translater_detaile_setting">The people who helped translate the app.</string>
    <string name="alarm_full_battery_heading_setting">Show alert when the battery is full</string>
    <string name="alarm_low_battery_heading_setting">Show alert when the battery is low</string>
    <string name="alarm_high_temp_heading_setting">Show alert when the battery temperature is high</string>
    <string name="Alert_custom_full_battery_tv_setting">Battery full level</string>
    <string name="Alert_custom_low_battery_tv_setting">Battery low level</string>
    <string name="Alert_custom__high_custom_tv_setting">Battery temperature</string>
    <string name="battery_level_for_notification">Battery level</string>
    <string name="Alert_custom__full_level">Battery full</string>
    <string name="Alert_custom__low_level">Battery low</string>
    <string name="Alert_custom__high_temp">Battery hot</string>
    <string name="dissconneced">Disconnected</string>
    <string name="notification_heading_setting">Hide if not charging</string>
    <string name="notification_detaile_setting">Use "minimum" noification priority if not charging</string>
    <string name="permanent_notification_heading_setting">Notification</string>
    <string name="permanent_notification_detaile_setting">Switch on/off the permanent notification</string>
    <string name="toast_hide_notificaion_message">Notification will show on charging</string>

    <string-array name="language">
        <item>Arabic</item>
        <item>Armenian</item>
        <item>French</item>
        <item>German</item>
        <item>Hindi</item>
        <item>Japanese</item>
        <item>Russian</item>
        <item>English</item>
        <item>Indonesian</item>
        <item>Chinese</item>
        <item>Italian</item>

        <item>Polish</item>
        <item>Ukrainian</item>
        <item>Bengali</item>
        <item>Turkish</item>
        <item>Korean</item>

        <item>Dutch</item>
        <item>Greek</item>
        <item> Norwegian</item>
        <item>Romainian</item>
        <item>Thai</item>
        <item>Spanish</item>
        <item>Portuguese</item>
        <item>Persian</item>
        <item>Traditional Chinese</item>
        <item>Hebrew</item>
        <item>Danish</item>
        <item>Finnish</item>
        <item>Slovak</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->


</resources>
