<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.MainActivity">
    <item
        android:id="@+id/action_pro_ico"
        android:orderInCategory="100"
        android:title="@string/action_pro"
        android:icon="@drawable/action_pro"
        app:showAsAction="always" />
    <group  android:id="@+id/grp1">

    </group>


    <group  android:id="@+id/grp2">
    <item
        android:id="@+id/action_pro"

        android:title="@string/action_pro"
        app:showAsAction="never" />
    </group>

    <item
        android:id="@+id/action_rate"

        android:title="@string/action_Rate"
        app:showAsAction="never" />
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@android:color/darker_gray"/>
    <item
        android:id="@+id/action_share"

        android:title="@string/action_share"
        app:showAsAction="never" />
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@android:color/darker_gray"/>

</menu>
