<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_margin="5dp"
       >

        <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/im_dialog"
            android:layout_marginLeft="5dp"
        android:src="@drawable/ic_launcher"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_alignParentLeft="true"
       />


        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_estimate_text_view"
        android:id="@+id/textView"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"

            android:layout_gravity="center"
            android:textColor="@color/layout_inner"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_toRightOf="@+id/im_dialog"
            android:layout_marginTop="30dp"
       />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_time_text_view"
            android:layout_below="@+id/textView"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="@color/layout_inner"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginBottom="5dp"
            />

        <Button
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:textColor="@color/colorPrimary"

            android:text="X"
            android:gravity="center"
            android:background="@color/layout_inner"
            android:id="@+id/cross_text_view"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_margin="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/tv_dialog"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:textSize="25dp"
        android:elevation="20dp"
        android:textStyle="normal"
        android:textColor="@color/layout_inner"/>

    <LinearLayout
        android:background="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

    <Button

        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/ok_buton"
        android:layout_marginTop="50dp"
        android:id="@+id/bt_dialog"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:background="@color/layout_inner"
        android:textColor="@color/colorPrimary"
        android:textSize="50dp"
        android:gravity="center"
        />
        </LinearLayout>
</LinearLayout>
</LinearLayout>
